--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "rollup -c rollup.config.js",
+    "dev": "run-p dev:**",
+    "dev:example": "cd example && yarn dev",
+    "dev:dist": "rollup -c rollup.config.js -w",
     "lint": "eslint"
   },
   "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
+    "husky": "^8.0.1",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.75.7",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
