--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,30 @@
 {
   "compilerOptions": {
-      "target": "es6",
-      "module": "es6",
-      "outDir": "../../bin/tsc/layaAir",
-      "composite":true,
-      "stripInternal": true,
-      "removeComments": false,
-      "preserveConstEnums": true,
-      "noImplicitAny": true,
-      "noImplicitThis": true,
-      "strictFunctionTypes": true,
-      "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-      "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-      "strictPropertyInitialization":false
-      // "strictNullChecks": true,
-      // "strict": true /* Enable all strict type-checking options. */,
-       //"noUnusedLocals": true /* Report errors on unused locals. */,
-      //"noUnusedParameters": true /* Report errors on unused parameters. */,
-  }
+    "lib": ["DOM"],
+    "target": "es6",
+    "module": "es6",
+    "composite":true,
+    "stripInternal": true,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictFunctionTypes": true,
+    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+    "strictPropertyInitialization":false,
+    "suppressImplicitAnyIndexErrors": true,
+    "noEmit": false,
+    "declaration": true,
+    "declarationDir": "types",
+    "outDir": "dist",
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "example",
+    "test"
+  ]
 }
