mod: 增加几何相关类以及单元测试jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "declaration": true,
     "declarationDir": "types",
     "outDir": "dist",
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
