--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "dev": "run-p dev:**",
     "dev:example": "cd example && yarn dev",
     "dev:dist": "rollup -c rollup.config.js -w",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.75.7",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
