--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-node_modules
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+node_modules/
+
+# production
+.docusaurus/
+dist/
+tmp/
+cjs/
+esm/
+es2017/
+
+# misc
+.idea/
 .DS_Store
-.vscode
-.idea
+*.swp
+*.dia~
 
-package-lock.json
-
-tsconfig.tsbuildinfo
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
