--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
   "name": "tyro2d",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "run-p dev:**",
-    "dev:example": "cd example && yarn dev",
-    "dev:dist": "rollup -c rollup.config.js -w",
-    "lint": "eslint",
-    "test": "jest"
+  "description": "A simple HTML5 game engine for 2D games.",
+  "main": "./dist/tyro2d.umd.js",
+  "module": "./dist/tyro2d.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/tyro2d.mjs",
+      "require": "./dist/tyro2d.umd.js"
+    }
   },
-  "dependencies": {},
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "prepublishOnly": "pnpm build",
+    "build": "vite build",
+    "start": "docusaurus start",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "tyro2d",
+    "tyro",
+    "game engine",
+    "html5 game",
+    "2d game"
+  ],
+  "author": "kevin <zkevin1997@outlook>",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@types/jest": "^29.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.18.0",
-    "husky": "^8.0.1",
-    "jest": "^29.2.2",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.75.7",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "ts-jest": "^29.0.3",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "@applint/spec": "^1.2.3",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
+    "@docusaurus/types": "^2.4.1",
+    "@mdx-js/react": "^1.6.22",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "3.0.0-beta.3"
   }
 }
