--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@docusaurus/types": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
     "concurrently": "^8.2.0",
+    "csstype": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^6.0.1",
